md-docs/cloud-registry/cli-ref/v0/registry/index.md
[Документация Yandex Cloud](../../../../index.md) > [Yandex Cloud Registry](../../../index.md) > [Справочник CLI (англ.)](../../index.md) > [v0](../index.md) > registry > Overview

# yc cloud-registry v0 registry

Manage registries

#### Command Usage

Syntax:

`yc cloud-registry v0 registry <group|command>`

#### Command Tree

- [yc cloud-registry v0 registry add-access-binding](add-access-binding.md) — Add access binding for the specified registry

- [yc cloud-registry v0 registry add-ip-permissions](add-ip-permissions.md) — Add ip permissions for the specified registry

- [yc cloud-registry v0 registry create](create.md) — Creates a registry in the specified folder

- [yc cloud-registry v0 registry delete](delete.md) — Deletes the specified registry

- [yc cloud-registry v0 registry force-delete](force-delete.md) — Deletes the specified registry

- [yc cloud-registry v0 registry get](get.md) — Returns the specified Registry

- [yc cloud-registry v0 registry list](list.md) — Retrieves the list of Registry resources

- [yc cloud-registry v0 registry list-access-bindings](list-access-bindings.md) — Lists access bindings for the specified registry

- [yc cloud-registry v0 registry list-artifacts](list-artifacts.md) — Retrieves the list of Registry artifact resources in the specified registry

- [yc cloud-registry v0 registry list-ip-permissions](list-ip-permissions.md) — List ip permissions for the specified registry

- [yc cloud-registry v0 registry remove-access-binding](remove-access-binding.md) — Remove access binding for the specified registry

- [yc cloud-registry v0 registry remove-ip-permissions](remove-ip-permissions.md) — Remove ip permissions for the specified registry

- [yc cloud-registry v0 registry set-access-bindings](set-access-bindings.md) — Set access bindings for the specified registry

- [yc cloud-registry v0 registry set-ip-permissions](set-ip-permissions.md) — Set ip permissions for the specified registry

- [yc cloud-registry v0 registry update](update.md) — Updates the specified registry

- [yc cloud-registry v0 registry lifecycle-policy](lifecycle-policy/index.md) — Manage lifecycle policies for artifacts

  - [yc cloud-registry v0 registry lifecycle-policy change-state](lifecycle-policy/change-state.md) — Changes the state of the specified lifecycle policy

  - [yc cloud-registry v0 registry lifecycle-policy create](lifecycle-policy/create.md) — Create a lifecycle policy.

  - [yc cloud-registry v0 registry lifecycle-policy delete](lifecycle-policy/delete.md) — Deletes the specified lifecycle policy

  - [yc cloud-registry v0 registry lifecycle-policy dry-run](lifecycle-policy/dry-run.md) — Simulate the lifecycle policy execution

  - [yc cloud-registry v0 registry lifecycle-policy get](lifecycle-policy/get.md) — Get information about a lifecycle policy.

  - [yc cloud-registry v0 registry lifecycle-policy list](lifecycle-policy/list.md) — List lifecycle policies.

  - [yc cloud-registry v0 registry lifecycle-policy update](lifecycle-policy/update.md) — Updates the specified lifecycle policy

- [yc cloud-registry v0 registry scan-policy](scan-policy/index.md) — Manage scan policies for registries

  - [yc cloud-registry v0 registry scan-policy create](scan-policy/create.md) — Create a scan policy.

  - [yc cloud-registry v0 registry scan-policy delete](scan-policy/delete.md) — Deletes the specified scan policy

  - [yc cloud-registry v0 registry scan-policy get](scan-policy/get.md) — Get information about a scan policy.

  - [yc cloud-registry v0 registry scan-policy get-by-registry](scan-policy/get-by-registry.md) — Get scan policy of the specified registry.

  - [yc cloud-registry v0 registry scan-policy update](scan-policy/update.md) — Updates the specified scan policy

#### Global Flags

#|
||Flag | Description ||
|| `--profile` | `string`

Set the custom profile. ||
|| `--region` | `string`

Set the region. ||
|| `--cloud-id` | `string`

Set the ID of the cloud to use. ||
|| `--folder-id` | `string`

Set the ID of the folder to use. ||
|| `--folder-name` | `string`

Set the name of the folder to use (will be resolved to id). ||
|| `--debug` | Debug logging. ||
|| `--debug-grpc` | Debug gRPC logging. Very verbose, used for debugging connection problems. ||
|| `--no-user-output` | Disable printing user intended output to stderr. ||
|| `--pager` | `string`

Set the custom pager. ||
|| `--no-pager` | Do not pipe help output through a pager. ||
|| `--format` | `string`

Set the output format: text (default), yaml, json, json-rest. ||
|| `--retry` | `int`

Enable gRPC retries. By default, retries are enabled with maximum 5 attempts.
Pass 0 to disable retries. Pass any negative value for infinite retries.
Even infinite retries are capped with 2 minutes timeout. ||
|| `--timeout` | `string`

Set the timeout. ||
|| `--token` | `string`

Set the OAuth token to use. ||
|| `--jq` | `string`

Query to select values from the response using jq syntax ||
|| `--endpoint` | `string`

Set the Cloud API endpoint (host:port). ||
|| `--impersonate-service-account-id` | `string`

Set the ID of the service account to impersonate. ||
|| `--no-browser` | Disable opening browser for authentication. ||
|| `--query` | `string`

Query to select values from the response using jq syntax ||
|| `--print-metadata` | Print operation metadata along with result. ||
|| `--syntax` | `string`

Choose syntax option. ||
|| `--cli-auto-prompt` | `string[="on"]`

Enable interactive auto-prompt mode. Values: on, partial, off. Bare --cli-auto-prompt is equivalent to --cli-auto-prompt=on. ||
|| `--no-cli-auto-prompt` | Disable interactive auto-prompt mode (overrides --cli-auto-prompt, env and profile). ||
|| `-h`, `--help` | Display help for the command. ||
|#